--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -17,7 +17,7 @@ video {
 }
 
 .hero-container {
-  /* background: url("../images/img-5.jpg") center center/cover no-repeat; */
+  background: url("../images/img-5.jpg") center center/cover no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
