--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,17 +7,9 @@ video {
   opacity: 80%;
 }
 
-.image {
-  object-fit: cover;
-  width: 100%;
-  height: 90%;
-  position: fixed;
-  z-index: -1;
-  opacity: 80%;
-}
-
 .hero-container {
-  background: url("../images/img-5.jpg") center center/cover no-repeat;
+  /* background: url("../images/img-5.jpg") center center/cover no-repeat; */
+
   height: 100vh;
   width: 100%;
   display: flex;
